corrections; switch to tweedie if delta fails; add extra_time if gamma has missing years; relax gradient criteria; add other checks

--- a/analysis-survey/1-index-standardization.Rmd
+++ b/analysis-survey/1-index-standardization.Rmd
@@ -6,14 +6,17 @@ output: html_document
 params:
     # species: "Redbanded Rockfish"
     # species: "Arrowtooth Flounder"
+    # species: "Big Skate"
     species: "North Pacific Spiny Dogfish"
     # species: "Pacific Ocean Perch"
     # species: "Bocaccio"
-    # species: "Yelloweye Rockfish"
+    # species: "Rougheye/Blackspotted Rockfish Complex"
     # species: "Pacific Sand Lance"
     # species: "Pacific Herring"
     # region: "Coast-wide trawl surveys"
     region: "HBLL outside surveys"
+    # region: "HBLL inside surveys"
+    # region: "North (PMFC 5DE)"
     delta_model: TRUE
     # region: "HBLL inside surveys"
     name: "-rw-no-covs" # covariate string used to name model rds
@@ -153,18 +156,18 @@ if (region == "HBLL outside surveys") {
 
 if (region == "HBLL inside surveys") {
   nd_all <- readRDS(paste0("data/nd_hbll_inside_index.rds")) 
-  survey <- c("HBLL IN N", "HBLL IN S")
+  survey <- c("HBLL INS N", "HBLL INS S")
   type <- "HBLL (inside)"
   model_ssid <- c(39, 40)
 }
 
 if (region != "HBLL inside surveys"){
 all_data <- readRDS("~/github/dfo/gftrends/analysis-survey/data/all-survey-sets-2021.rds") %>% 
-  filter(species_common_name == tolower(species))
+  filter(species_common_name == tolower(species)) %>% rename(survey_series_id=survey_series_id.x)
 } else {
-# TODO
+all_data <- readRDS("~/github/dfo/gftrends/analysis-survey/data/all-inside-hbll-2021.rds") %>%
+  filter(species_common_name == tolower(species))
 }
-
 ```
 
 
@@ -175,13 +178,12 @@ if (type == "Synoptic trawl"){
   filter(survey_abbrev %in% survey) 
   units <- "density_kgpm2"  
   d$density <- d[[units]] * 1000000 # change from per m2 to per km2
-  family <- tweedie(link = 'log')
+  family <- tweedie(link = 'log') # to be used if not a delta model
 } else {
   d <- all_data %>%
   filter(survey_abbrev %in% survey) 
   units <- "density_ppkm2"
   d$density <- d[[units]] # change from per m2 to per km2
-  family <- tweedie(link = 'log')
   # family <- nbinom2(link = 'log') # could use this instead, but would need to change units and add offset
 }
 
@@ -200,21 +202,9 @@ if (region == "South 5 only (PMFC 5ABC)") {
 positive_sets <- filter(d, density != 0)
 prop_pos <- round(nrow(positive_sets) / nrow(d), digits = 3)
 data <- d %>% filter(survey_abbrev %in% unique(positive_sets$survey_abbrev))
-ssid_string <- paste0(unique(data$survey_series_id.x), collapse = "n")
+ssid_string <- paste0(unique(data$survey_series_id), collapse = "n")
 surv_string <- paste0(unique(data$survey_abbrev), collapse = ", ")
 data <- sdmTMB::add_utm_columns(data, c("longitude", "latitude"))
-```
-
-
-```{r}
-# Check if a model already exists
-if (delta_model) {
-  try({ m2 <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, "-gamma.rds"))})
-  if (!exists("m2")) update_model <- TRUE
-}else{  
-  try({ m <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, ".rds"))})
-  if (!exists("m")) update_model <- TRUE
-}
 ```
 
 Make mesh
@@ -231,6 +221,32 @@ if (prop_pos < 0.1) {
     plot(spde)
   }
 }
+
+if (delta_model) {
+  data <- data %>% mutate(present = ifelse(density > 0, 1, 0))  
+  data2 <- dplyr::filter(data, density > 0)
+  
+  if (prop_pos < 0.1) {
+    spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 25)
+  } else {
+    if (prop_pos < 0.7) {
+      spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 10)
+    } else {
+      spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 15)
+    }
+  }
+# }
+}
+```
+```{r}
+# Check if a model already exists
+if (delta_model) {
+  try({ m2 <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, "-gamma.rds"))})
+  if (!exists("m2")) update_model <- TRUE
+}else{  
+  try({ m <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, ".rds"))})
+  if (!exists("m")) update_model <- TRUE
+}
 ```
 
 Run sdmTMB model
@@ -239,8 +255,7 @@ Run sdmTMB model
 if (update_model) {
   if (delta_model) {
   tictoc::tic()
-  data <- data %>% mutate(present = ifelse(density > 0, 1, 0))  
-  
+    
   m1 <- sdmTMB(
     present ~ 1,
     data,
@@ -252,37 +267,44 @@ if (update_model) {
     # reml = TRUE,
     silent = TRUE
   )
-
+  tictoc::toc()
   saveRDS(m1, file = paste0("models/m-", spp, "-", ssid_string, name, "-presence.rds"))
+  
+  if(m1$sd_report$pdHess & !m1$bad_eig){  
     
-  data2 <- dplyr::filter(data, density > 0)
-  if (prop_pos < 0.1) {
-    spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 25)
+  # check if positive sets are found in all years
+  if (!all(sort(unique(data$year))==sort(unique(data2$year)))) {
+    pos_years <- data2 %>% select(year)
+    missing_years <- anti_join(data, pos_years, by = "year") %>% select(year) %>% unique()
+    missing_years <- missing_years$year
   } else {
-    if (prop_pos < 0.7) {
-      spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 10)
-    } else {
-      spde2 <- make_mesh(data2, xy_cols = c("X", "Y"), cutoff = 15)
-    }
+    missing_years <- NULL
   }
   
+  tictoc::tic()
+    
   m2 <- sdmTMB(
     density ~ 1,
     data2,
     mesh = spde2,
     time = "year",
+    extra_time = missing_years,
     family = Gamma(link = "log"),
     spatial = "on",
     spatiotemporal = "RW",
     # reml = TRUE,
     silent = TRUE
   )
-
-  saveRDS(m2, file = paste0("models/m-", spp, "-", ssid_string, name, "-gamma.rds"))
   tictoc::toc()
+  saveRDS(m2, file = paste0("models/m-", spp, "-", ssid_string, name, "-gamma.rds"))
+
+  } else { delta_model <- FALSE }  
   
-  } else {
+  if(!m2$sd_report$pdHess | m2$bad_eig){delta_model <- FALSE} 
   
+  } 
+  
+if (!delta_model) {
   tictoc::tic()
   m <- sdmTMB(
     density ~ 1,
@@ -303,39 +325,46 @@ if (update_model) {
 ```
 
 ```{r}
-if (delta_model) {
+# if (delta_model) {
     try({ m1 <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, "-presence.rds"))
-    if (max(m1$gradients) > 0.005) {
+    if (max(m1$gradients) > 0.01) {
       m1 <- run_extra_optimization(m1, newton_loops = 1L, nlminb_loops = 0L)
       saveRDS(m1, file = paste0("models/m-", spp, "-", ssid_string, name, "-presence.rds"))
     }
     })
     try({ m2 <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, "-gamma.rds"))
-    if (max(m2$gradients) > 0.001) {
+    if (max(m2$gradients) > 0.01) {
       m2 <- run_extra_optimization(m2, newton_loops = 1L, nlminb_loops = 0L)
       saveRDS(m2, file = paste0("models/m-", spp, "-", ssid_string, name, "-presence.rds"))
     }
     })
-  } else {
+  # } else {
   
     try({ m <- readRDS(paste0("models/m-", spp, "-", ssid_string, name, ".rds"))
-    if (max(m$gradients) > 0.001) {
+    if (max(m$gradients) > 0.01) {
       m <- run_extra_optimization(m, newton_loops = 1L, nlminb_loops = 0L)
       saveRDS(m, file = paste0("models/m-", spp, "-", ssid_string, name, ".rds"))
     }
     })
-  }  
+  # }  
 
 try({m1})
 try({max(m1$gradients)})
+try({paste("Hessian positive and definite =", m1$sd_report$pdHess)}) 
+try({paste("Bad eigen =", m1$bad_eig)}) 
 try({tidy(m1, effects = "ran_pars", conf.int = TRUE)})
 
 try({m2})
 try({max(m2$gradients)})
+try({paste("Hessian positive and definite =", m2$sd_report$pdHess)}) 
+
+try({paste("Bad eigen =", m2$bad_eig)}) 
 try({tidy(m2, effects = "ran_pars", conf.int = TRUE)})
 
 try({m})
 try({max(m$gradients)})
+try({paste("Hessian positive and definite =", m$sd_report$pdHess)}) 
+try({paste("Bad eigen =", m$bad_eig)}) 
 try({tidy(m, effects = "ran_pars", conf.int = TRUE)})
 ```
 
@@ -356,7 +385,7 @@ nd <- nd_all %>%
   if(type == "Synoptic trawl"){
     nd <- filter(nd, survey %in% unique(positive_sets$survey_abbrev)) 
   } else {
-    nd <- filter(nd, ssid %in% unique(positive_sets$survey_series_id.x)) 
+    nd <- filter(nd, ssid %in% unique(positive_sets$survey_series_id)) 
   }
   nd <- na.omit(nd)
   nd$year <- as.integer(nd$year)
@@ -369,7 +398,13 @@ samples <- data %>%
   select(year, dominant_surv = survey_abbrev, total, freq)
 
 if (delta_model & exists("m1") & exists("m2")) {
-    if (max(m1$gradients) < 0.001 & max(m2$gradients) < 0.001 & update_index) {
+    both_converged <- all(
+      (max(m1$gradients) < 0.005), (max(m2$gradients) < 0.005), 
+      !m1$bad_eig, !m2$bad_eig,
+      m1$sd_report$pdHess, m2$sd_report$pdHess # old way
+      # m1$pos_def_hessian, m2$pos_def_hessian # new way
+    ) 
+    if (both_converged & update_index) {
 
     p1 <- predict(m1, newdata = nd, nsim = 200)
     p2 <- predict(m2, newdata = nd, nsim = 200)
@@ -382,8 +417,9 @@ if (delta_model & exists("m1") & exists("m2")) {
       type = type, 
       region = region,
       surveys = paste(unique(positive_sets$survey_abbrev), collapse = ", "),
-      ssids = paste(unique(positive_sets$survey_series_id.x), collapse = ", "),
+      ssids = paste(unique(positive_sets$survey_series_id), collapse = ", "),
       ssid_string = ssid_string, 
+      model = "delta-gamma",
       max_grad = max(max(m1$gradients),max(m2$gradients))
       )
     i <- left_join(i, samples)
@@ -391,7 +427,7 @@ if (delta_model & exists("m1") & exists("m2")) {
   }
 } else {
 if (exists("m")) {
-  if (max(m$gradients) < 0.001 & update_index) {
+  if (max(m$gradients) < 0.1 & !m$bad_eig & m$sd_report$pdHess & update_index) {
     
     p <- predict(m, newdata = nd, nsim = 200)
 
@@ -401,8 +437,9 @@ if (exists("m")) {
       type = type, 
       region = region,
       surveys = paste(unique(positive_sets$survey_abbrev), collapse = ", "),
-      ssids = paste(unique(positive_sets$survey_series_id.x), collapse = ", "),
+      ssids = paste(unique(positive_sets$survey_series_id), collapse = ", "),
       ssid_string = ssid_string, 
+      model = "Tweedie",
       max_grad = max(m$gradients)
       )
     i <- left_join(i, samples)
@@ -423,12 +460,18 @@ try({
 })
 }
 
+if (region == "North (PMFC 5DE)") {
+  y_threshold <- max(i$upr)
+} else {
+  y_threshold <- 5
+}
+
 if (exists("i")) {
   g <- ggplot(i, aes(year, est / 1000)) +
     geom_line() +
     geom_ribbon(aes(ymin = lwr / 1000, ymax = upr / 1000), alpha = 0.4) +
     coord_cartesian(ylim = c(0, ifelse(
-      max(i$upr) < 5 * max(i$est), max(i$upr) / 1000, max(i$est) * 3 / 1000
+      max(i$upr) < y_threshold * max(i$est), max(i$upr) / 1000, max(i$est) * 3 / 1000
     ))) +
     ylab("Biomass (tonnes)") +
     ggtitle(paste(species), subtitle = paste0(region, " (", surv_string, ")"))
